@@ -1,6 +1,5 @@
 {
     "gui": {
-        "label": "Optional component",
         "command": "echo %-%",
         "components": [
             {
