@@ -1,6 +1,5 @@
 {
     "gui": {
-        "label": "Copy file",
         "window_name": "Picker sample",
         "command": "copy %foo% %bar%",
         "button": "copy",
