@@ -1,6 +1,5 @@
 {
     "gui": {
-        "label": "Minimal Sample",
         "command": "echo Hello!",
         "components": []
     }
