@@ -7,7 +7,6 @@ You can rename the window title and the execution button.
 ```json
 {
     "gui": {
-        "label": "Minimal Sample",
         "window_name": "Title here!",
         "command": "echo Hello!",
         "button": "Hello!",
