@@ -5,7 +5,7 @@ Tuw expects user's default locale for stdout on Windows. If you want to use UTF-
 ```json
 {
     "gui": {
-        "label": "Use UTF-8 outputs on Windows",
+        "window_name": "Use UTF-8 outputs on Windows",
         "command": "powershell -ExecutionPolicy Bypass -File \"utf.ps1\"",
         "codepage": "utf8",
         "components": []
