@@ -1,6 +1,6 @@
 {
     "gui": {
-        "label": "Use UTF-8 outputs on Windows",
+        "window_name": "Use UTF-8 outputs on Windows",
         "command": "powershell -ExecutionPolicy Bypass -File \"utf.ps1\"",
         "codepage": "utf8",
         "components": []
