@@ -5,7 +5,7 @@ Tuw will refrain from showing the dialog regardless of how many times you push t
 
 ```json
 "gui": {
-    "label": "Skip dialog",
+    "window_name": "Skip dialog",
     "command": "echo No dialogues...",
     "show_success_dialog": false,
     "components": []
