@@ -1,6 +1,6 @@
 {
     "gui": {
-        "label": "Skip dialog",
+        "window_name": "Skip dialog",
         "command": "echo No dialogues...",
         "show_success_dialog": false,
         "components": []
