@@ -14,7 +14,7 @@ There are two options for checking the tool version.
     "recommended": "2.1.0",
     "minimum_required": "2.0.0",
     "gui": {
-        "label": "You can't see this GUI.",
+        "window_name": "You can't see this GUI.",
         "command": "echo Hello!",
         "components": []
     }
