@@ -2,7 +2,7 @@
     "recommended": "2.1.0",
     "minimum_required": "2.0.0",
     "gui": {
-        "label": "You can't see this GUI.",
+        "window_name": "You can't see this GUI.",
         "command": "echo Hello!",
         "components": []
     }
