@@ -4,7 +4,7 @@
      * Multi-line comment
      */
     "gui": {
-        "label": "JSON with Comments",
+        "window_name": "JSON with Comments",
         "command": "echo Hello!",
         "components": [],
         // You can put a trailing comma after the last element.
