@@ -1,6 +1,6 @@
 {
     "gui": {
-        "label": "Unicode Sample",
+        "window_name": "Unicode Sample",
         "command": "echo file: %รหัส% & echo folder: %-% & echo checkbox: %-%",
         "button": "こんにちは！",
         "components": [
