@@ -1,5 +1,6 @@
 - Array brackets can now be omitted when there is only one element.
 - GUI elements can now be defined in root object.
+- GUI labels became optional.
 
 ver 0.7.2
 - Added "optional" to ignore some options when a text box is empty.
